--- a/Three/Views/Department/Index.cshtml
+++ b/Three/Views/Department/Index.cshtml
@@ -15,7 +15,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-4 offset-md-2">
+    <div class="col-md-2">
+        @await Component.InvokeAsync("CompanySummary", new { title = "部门列表页的汇总" })
+    </div>
+    <div class="col-md-4">
         <a asp-action="Add">Add</a>
     </div>
 </div>
